src/scss/layout/_lower-section.scss
@use "sass:color";
@use '../base/variables' as v;
@use '../base/mixins' as m;

@include m.tablet {
    .lower-section {
        display: grid;
        grid-template-columns: 2fr 1fr;
        column-gap: 2rem;
    }
}

.entry-blog {
    margin-bottom: 2rem;

    @include m.tablet {
        display: grid;
        grid-template-columns: 1fr 2fr;
        column-gap: 2rem;
    }

    &:last-of-type {
        margin-bottom: 0;
    }
}

.entry-text {
    a {
        color: v.$darkGray;
    }

    h4 {
        margin: 0;
        line-height: 1.4;

        &::after {
            content: '';
            display: block;
            width: 15rem;
            height: 0.5rem;
            background-color: v.$green;
            margin-top: 1rem;
        }
    }

    span {
        color: v.$yellow;
    }
}

